ADD: grabbing data

--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <title>CO2 Emissions per Capita, 1996</title>
+    <script type="module" src="./js/grab_data.js"></script>
+    <style>
+        /* Add some basic styling */
+        body {
+            font-family: Arial, sans-serif;
+        }
+        svg {
+            background-color: #f9f9f9;
+        }
+    </style>
 </head>
 <body>
-    <div class="coming-soon">
-        <h1>Our Website is Coming Soon!</h1>
-    </br>
-        <h4>VizWizards</h4>
-    </div>
+    <h1>CO2 emissions per capita, 1996</h1>
+    <div id="chart"></div> <!-- Chart will go here -->
 </body>
 </html>
