Add a D3 bar chart, python process

--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CO2 Emissions per Capita, 1996</title>
-    <script type="module" src="./js/grab_data.js"></script>
+    <title>D3 Bar Chart</title>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
-        /* Add some basic styling */
         body {
             font-family: Arial, sans-serif;
         }
-        svg {
-            background-color: #f9f9f9;
+        #chart {
+            margin: 20px;
         }
     </style>
 </head>
 <body>
     <h1>CO2 emissions per capita, 1996</h1>
-    <div id="chart"></div> <!-- Chart will go here -->
-</body>
+    <div id="chart"></div>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+
+    <script src="./js/script.js"></script></body>
 </html>
