--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <h1>CO2 emissions per capita, 1996</h1>
-    <div id="chart"></div>
+    <div id="chart-one-year"></div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
-    <script src="./js/script.js"></script></body>
+    <script src="./js/script_one_year.js"></script></body>
 </html>
