--- a/index.html
+++ b/index.html
@@ -5,19 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D3 Bar Chart</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        #chart {
-            margin: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>CO2 emissions per capita, 1996</h1>
+    <h1>CO₂ emissions per capita, 1996</h1>
     <div id="chart-one-year"></div>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-
     <script src="./js/script_one_year.js"></script></body>
+</body>
 </html>
