add chart one decade

--- a/index.html
+++ b/index.html
@@ -20,4 +20,6 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
     <script src="./js/script_one_year.js"></script></body>
+    <div id="chart-one-decade"></div>
+
 </html>
