ADD display text on mouse hover

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D3 Bar Chart</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>CO₂ emissions per capita, 1996</h1>
     <div id="chart-one-year"></div>
-    <script src="./js/script_one_year.js"></script></body>
+    <script src="./js/script_one_year.js"></script>
 </body>
 </html>
