ADD mouse hoever for stacked bar chart

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     ng-app="myApp"
   >
     <div ng-controller="saba">
-      <h1 ng-bind="name"></h1>
+      <!-- <h1 ng-bind="name"></h1> -->
       <div id="chart-one-year"></div>
       <div id="chart-stacked"></div>
 
     </div>
 
     <div ng-controller="melika">
-      <h1 ng-bind="name"></h1>
+      <!-- <h1 ng-bind="name"></h1> -->
     </div>
 
     <div ng-controller="romena">
-      <h1 ng-bind="name"></h1>
+      <!-- <h1 ng-bind="name"></h1> -->
     </div>
 
     <script src="js/master.js"></script>
