--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <!-- <h1 ng-bind="name"></h1> -->
       <div id="chart-one-year"></div>
       <div id="chart-stacked"></div>
-
+      <div id="chart-container" style="display: flex; gap: 30px">
+      </div>
     </div>
 
     <div ng-controller="melika">
