ADD percentage chart

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <!-- <h1 ng-bind="name"></h1> -->
       <div id="chart-one-year"></div>
       <div id="chart-stacked"></div>
-      <div id="chart-container" style="display: flex; gap: 30px">
-      </div>
+      <div id="chart-container" style="display: flex; gap: 30px"></div>
+      <h3 style="text-align: center">Stacked CO2 Contribution by Country</h3>
+      <div id="stacked-chart"></div>
     </div>
 
     <div ng-controller="melika">
