--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <button ng-click="tstfunc('3')">click 3</button>
       <button ng-click="tstfunc('4')">click 4</button>
       <button ng-click="tstfunc('5')">click 5</button>
-
-
+        <a href="melika.html">boro to melika html</a>
       <div ng-show="pageNum=='1'">
         <!-- <h1 ng-bind="name"></h1> -->
         <div id="chart-one-year"></div>
@@ -35,6 +34,7 @@
       <div ng-show="pageNum=='4'">
         <h3 style="text-align: center">Stacked CO2 Contribution by Country</h3>
         <div id="stacked-chart"></div>
+
       </div>
 
 
@@ -42,6 +42,8 @@
         <div ng-if="isMelikaActive">
           <h1 ng-bind="name"></h1>
           <!-- <div id="chart-one-year"></div> -->
+          <svg width="800" height="400"></svg>
+
         
         </div>
         <!-- <h1 ng-bind="name"></h1> -->
@@ -54,6 +56,6 @@
       <!-- <h1 ng-bind="name"></h1> -->
     </div>
 
-    <script src="js/master.js"></script>
+    <script src="master.js"></script>
   </body>
 </html>
