--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <button ng-click="tstfunc('3')">click 3</button>
       <button ng-click="tstfunc('4')">click 4</button>
       <button ng-click="tstfunc('5')">click 5</button>
-        <a href="melika.html">boro to melika html</a>
+        <a href="decade.html">a decade</a>
+        <a href="heatmap.html">heatmap</a>
       <div ng-show="pageNum=='1'">
         <!-- <h1 ng-bind="name"></h1> -->
         <div id="chart-one-year"></div>
