--- a/index.html
+++ b/index.html
@@ -1,36 +1,3 @@
-<!-- 
-    <div ng-controller="saba">
-      <button ng-click="tstfunc('1')">click me</button>
-      <button ng-click="tstfunc('2')">click 3</button>
-      <button ng-click="tstfunc('4')">click 2</button>
-      <button ng-click="tstfunc('3')">click 4</button>
-      <button ng-click="tstfunc('5')">click 5</button>
-        <a href="decade.html">a decade</a>
-        <a href="heatmap.html">heatmap</a>
-      <div ng-show="pageNum=='1'">
-        <!-- <h1 ng-bind="name"></h1> -->
-        <div id="chart-one-year"></div>
-        
-      </div>
-
-      <div ng-show="pageNum=='2'">
-        <div id="chart-stacked"></div>
-      </div>
-      <div ng-show="pageNum=='3'">
-        <div id="chart-container" style="display: flex; gap: 30px"></div>
-      </div>
-      <div ng-show="pageNum=='4'">
-        <h3 style="text-align: center">Stacked CO2 Contribution by Country</h3>
-        <div id="stacked-chart"></div>
-
-      </div>
-
-    <script src="master.js"></script>
-  </body>
-</html> -->
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body  ng-app="myApp">
+<body>
 
     <!-- Header Section with Blur Background -->
     <header class="hero-section">
