add image of page one

--- a/index.html
+++ b/index.html
@@ -24,31 +24,20 @@
     <!-- Main Content Section -->
     <main class="content">
         <section class="info-section">
-            <h2>Easily turn your data into stunning charts, maps, and interactive stories.</h2>
-            <div class="image-grid">
-                <a href="page1.html" class="image-card">
-                    <img src="chart1.png" alt="Engage your audience">
-                    <h3>Engage your audience</h3>
-                    <p>Create agency-quality data graphics and animated stories that bring your data to life.</p>
-                </a>
-                <a href="page2.html" class="image-card">
-                    <img src="chart2.png" alt="Empower the whole team">
-                    <h3>Empower the whole team</h3>
-                    <p>Flourish is easy enough for anyone to use. Start with a template and drop in data.</p>
-                </a>
-                <a href="page3.html" class="image-card">
-                    <img src="chart3.png" alt="Embed, share, present">
-                    <h3>Embed, share, present</h3>
-                    <p>Create seamless embeds, magical presentations, or engaging content for social.</p>
-                </a>
-                <a href="page4.html" class="image-card">
-                    <img src="chart4.png" alt="Your brand, your style">
-                    <h3>Your brand, your style</h3>
-                    <p>Get custom themes so everything has your logo, fonts, colors, and styles.</p>
-                </a>
+          <div class="circle-container">
+            <a href="page1.html">
+                <div class="circle-image">
+                    <img src="img/bar_icon.gif" alt="assignment-one">
+                </div>
+            </a>
+            <div class="circle-text">
+                <h2>Engage your audience</h2>
+                <p>Create agency-quality data graphics and animated stories that bring your data to life.</p>
             </div>
+        </div>
         </section>
     </main>
 
+<a href="https://lordicon.com/">Icons by Lordicon.com</a>
 </body>
 </html>
