--- a/page1.html
+++ b/page1.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <h1>Data Visualization Assignment</h1>
-        <a href="bar.html">Page 1: Bar Chart</a>
-        <a href="stacked.html">Page 2: Stacked Chart</a>
-        <a href="heatmap.html">Page 3: Heatmap</a>
+        <a href="bar.html">Bar chart</a>
+        <a href="stacked.html">Stacked bar chart</a>
+        <a href="heatmap.html">Heatmap</a>
     </div>
 </body>
 </html>
