--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
     <!-- Header Section with Blur Background -->
     <header class="hero-section">
         <div class="hero-content">
-            <h1>Beautiful and easy <br> data visualization and storytelling</h1>
-            <div class="buttons">
-                <a href="#get-started" class="button">Get started now</a>
-                <a href="#contact" class="button">Get in touch</a>
-            </div>
+            <h1>Data Visualization</h1>
+            <p>by VizWizards</p>
         </div>
     </header>
 
@@ -31,8 +28,8 @@
                 </div>
             </a>
             <div class="circle-text">
-                <h2>Engage your audience</h2>
-                <p>Create agency-quality data graphics and animated stories that bring your data to life.</p>
+                <h2>Assignment One</h2>
+                <p>Comparing categories</p>
             </div>
         </div>
         </section>
