--- a/bar.html
+++ b/bar.html
@@ -10,7 +10,12 @@
   </head>
   <body ng-app="myApp">
     <div ng-controller="saba">
-      <div id="chart-one-year"></div>
+      <div class="inline-container">
+        <div id="chart-one-year"></div>
+        <div class="text-box">
+        <p>This bar chart displays the annual CO₂ emissions per capita for various countries, with Qatar reaching over 65 tons per capita. Kuwait, the United Arab Emirates, and Curacao also have high emissions, each with over 25 tons per capita. Belgia has the lowest emissions per capita of all listed nations, emitting just over 10 tons per person.</p>
+      </div>
+      </div>
       <h1>Average CO₂ Emissions (2001-2010)</h1>
       <div id="chart_decade"></div>
     </div>
