fix the tree of project

--- a/html/bar.html
+++ b/html/bar.html
@@ -5,7 +5,7 @@
   <title>D3 Bar Chart</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
 <body ng-app="myApp">
@@ -25,7 +25,6 @@
       <div id="chart_decade"></div>
       <div class="text-box">
 
-
         <p>
           This chart displays the average CO₂ emissions by country from 2001 to 2010, showing considerable variation
           across different nations. Aruba and Bahrain stand out with notably high emissions, with Aruba reaching the
@@ -38,7 +37,7 @@
     </div>
 
   </div>
-  <script src="./master.js"></script>
+  <script src="../js/master.js"></script>
 
 </body>
 
