--- a/html/stacked.html
+++ b/html/stacked.html
@@ -6,7 +6,7 @@
     <title>D3 Bar Chart</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body ng-app="myApp">
     <div ng-controller="saba">
@@ -14,7 +14,7 @@
             <div id="chart-container" style="display: flex; gap: 30px"></div>
             <div id="stacked-chart"></div>
     
-      <script src="./master.js"></script>
+      <script src="../js/master.js"></script>
     </div>
   </body>
 </html>
