--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="content">
         <section class="info-section">
           <div class="circle-container">
-            <a href="page1.html">
+            <a href="html/page1.html">
                 <div class="circle-image">
                     <img src="img/bar_icon.gif" alt="assignment-one">
                 </div>
