--- a/html/heatmap.html
+++ b/html/heatmap.html
@@ -23,6 +23,6 @@ body,
   <div id="container"></div>
   <script src="https://cdn.anychart.com/releases/8.11.1/js/anychart-core.min.js"></script>
   <script src="https://cdn.anychart.com/releases/8.11.1/js/anychart-heatmap.min.js"></script>
-  <script src="heatmap.js"></script>
+  <script src="../js/heatmap.js"></script>
  </body>
 </html>
