change the design and colors

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     </header>
 
     <!-- Main Content Section -->
-    <main class="content">
       <section class="info-section">
         <div class="circle-container">
-          <a href="html/page1.html">
+          <a href="html/section_one.html">
             <div class="circle-image">
               <img src="img/bar_icon.gif" alt="section-one" />
             </div>
@@ -44,7 +43,6 @@
           </div>
         </div>
       </section>
-    </main>
 
     <a href="https://lordicon.com/">Icons by Lordicon.com</a>
   </body>
