--- a/html/bar.html
+++ b/html/bar.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
-<body ng-app="myApp">
+<body ng-app="myApp" style="background-color: var(--white);">
   <div ng-controller="saba">
     <div class="inline-container">
       <div id="chart-one-year"></div>
