--- a/html/stacked.html
+++ b/html/stacked.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body ng-app="myApp">
+  <body ng-app="myApp" style="background-color: var(--white);">
     <div ng-controller="saba">
             <div id="chart-stacked"></div>
             <div id="chart-container" style="display: flex; gap: 30px"></div>
