test iframe src

--- a/html/section_one.html
+++ b/html/section_one.html
@@ -45,7 +45,7 @@
           <nav class="nav">
             <ul style="display: flex">
               <li class="active">
-                <a ng-click="changeTab('/html/bar.html')">Bar Chart</a>
+                <a ng-click="changeTab('https://sababl.github.io/VizWizards/html/bar.html')">Bar Chart</a>
               </li>
               <li>
                 <a ng-click="changeTab('/html/stacked.html')">Stacked Chart</a>
