--- a/html/section_one.html
+++ b/html/section_one.html
@@ -48,9 +48,9 @@
                 <a ng-click="changeTab('https://sababl.github.io/VizWizards/html/bar.html')">Bar Chart</a>
               </li>
               <li>
-                <a ng-click="changeTab('./html/stacked.html')">Stacked Chart</a>
+                <a ng-click="changeTab('./stacked.html')">Stacked Chart</a>
               </li>
-              <li><a ng-click="changeTab('./html/heatmap.html')">Heatmap</a></li>
+              <li><a ng-click="changeTab('./heatmap.html')">Heatmap</a></li>
             </ul>
           </nav>
         </aside>
