--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div>
 
         <div class="circle-container">
-          <a href="html/page2.html">
+          <a href="html/snakey.html">
             <div class="circle-image">
-              <img style="height: 70%; margin-top: 30px;" src="img/alluvial-diagram.png" alt="section-one" />
+              <img style="height: 70%; margin-top: 30px; width: 70%;" src="img/alluvial-diagram.png" alt="section-one" />
             </div>
           </a>
           <div class="circle-text">
