add second projection

--- a/index.html
+++ b/index.html
@@ -34,12 +34,24 @@
         <div class="circle-container">
           <a href="html/snakey.html">
             <div class="circle-image">
-              <img style="height: 70%; margin-top: 30px; width: 70%;" src="img/alluvial-diagram.png" alt="section-one" />
+              <img style="height: 70%; margin-top: 30px; width: 70%;" src="img/alluvial-diagram.png" alt="section-two" />
             </div>
           </a>
           <div class="circle-text">
             <h2>Section Two</h2>
             <p>Alluvial</p>
+          </div>
+        </div>
+
+        <div class="circle-container">
+          <a href="html/section3.html">
+            <div class="circle-image">
+              <img style="height: 70%; margin-top: 30px; width: 70%;" src="img/map.png" alt="section-three" />
+            </div>
+          </a>
+          <div class="circle-text">
+            <h2>Section Three</h2>
+            <p>Map</p>
           </div>
         </div>
       </section>
