--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="circle-container">
-          <a href="html/section3.html">
+          <a href="html/map.html">
             <div class="circle-image">
               <img style="height: 70%; margin-top: 30px; width: 70%;" src="img/map.png" alt="section-three" />
             </div>
